[project]
name = "orimi-merchen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.21.0",
    "apscheduler>=3.11.0",
    "asgiref>=3.9.0",
    "piexif>=1.1.3",
    "pillow-heif>=1.0.0",
    "python-dotenv>=1.1.1",
    "pytz>=2025.2",
    "redis>=6.2.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "migrations",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
